--- a/rotas/angular.json
+++ b/rotas/angular.json
@@ -25,13 +25,12 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.css",
-              "../node_modules/materialize-css/dist/css/materialize.css"
+              "src/styles.css"
             ],
             "scripts": [
-              "../node_modules/jquery/dist/jquery.js",
-              "../node_modules/hammerjs/hammer.js",
-              "../node_modules/materialize-css/dist/js/materialize.js"
+              "node_modules/jquery/dist/jquery.js",
+              "node_modules/hammerjs/hammer.js",
+              "node_modules/materialize-css/dist/js/materialize.js"
             ]
           },
           "configurations": {
